<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register_mean_aggren">注册即代表您同意</string>
    <string name="user_protocol"><u>用户服务注册协议</u></string>
    <string name="next_step">下一步</string>
    <string name="visitor_login">游客模式</string>
    <string name="account_login">账号登录</string>
    <string name="get_make_sure_num">获取验证码</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="verity_dialog_title">请输入动态验证码</string>
    <string name="verify_tint">验证码发送至：</string>
    <string name="phone_number_sample">181****3575</string>
    <string name="count_down_sample">55S</string>
    <string name="get_verify_code_again"><u>重新获取</u></string>
    <string name="cancel">取 消</string>
    <string name="confirm">确 定</string>
    <string name="token_delete_info">确定将181*****3575从本地记录中删除吗？</string>
    <string name="password_setup_title">密码设置</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="pass_setup_input_pass_once">请输入想要设置的密码</string>
    <string name="pass_setup_input_pass_twice">请重复输入想要设置的密码</string>
    <string name="verify_code_login">验证码登录</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="alert_title">警告</string>
    <string name="bind_alert_info">您当前的账号为游客账号，如果您此时选择切换账号会造成此账号的数据丢失，一旦丢失无法找回，建议您先绑定账号之后在进行此操作，您确定要切换账号吗？</string>
    <string name="switch_option">切 换</string>
    <string name="bind_option">绑定账号</string>
    <string name="switch_info">此时切换账号会造成数据永久丢失！您确定切换账号么？</string>
</resources>