<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/password_setup_back"
        layout="@layout/image_back"/>

    <TextView
        android:id="@+id/password_setup_titile"
        style="@style/TextViewTitle"
        android:text="@string/password_setup_title"
        app:layout_constraintTop_toTopOf="@id/password_setup_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_setup_phone"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_setup_phone"
        style="@style/InputEditText"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_setup_titile" />

    <EditText
        android:id="@+id/input_verify_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        style="@style/InputEditText"
        android:hint="@string/input_verify_code"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/password_setup_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pass_setup_get_verify_code"/>

    <Button
        android:id="@+id/pass_setup_get_verify_code"
        style="@style/ButtonEnableStyle"
        android:text="@string/get_verify_code"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintStart_toEndOf="@id/input_verify_code"
        app:layout_constraintTop_toTopOf="@id/input_verify_code"
        app:layout_constraintEnd_toEndOf="@id/password_setup_phone"
        app:layout_constraintBottom_toBottomOf="@id/input_verify_code"/>


    <EditText
        android:id="@+id/pass_setup_input_pass_once"
        style="@style/InputEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_setup_input_pass_once"
        android:layout_marginTop="5dp"
        android:drawableRight="@drawable/bg_sdk_yanjing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_verify_code"
        app:layout_constraintEnd_toEndOf="@id/password_setup_phone"/>


    <EditText
        android:id="@+id/pass_setup_input_pass_twice"
        style="@style/InputEditText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_setup_input_pass_twice"
        android:layout_marginTop="5dp"
        android:drawableRight="@drawable/bg_sdk_yanjing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_setup_input_pass_once"
        app:layout_constraintEnd_toEndOf="@id/password_setup_phone"/>

    <Button
        android:id="@+id/pass_setup_confirm"
        style="@style/ButtonEnableStyle"
        android:text="@string/confirm"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_setup_input_pass_twice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>