<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/back"
        layout="@layout/image_back" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_delete_info"
        android:textColor="#3f4044"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_disable"
        android:textColor="#fff"
        android:textSize="20sp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="@string/cancel"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/confirm"
        android:text="@string/confirm"
        style="@style/ButtonEnableStyle"
        app:layout_constraintEnd_toEndOf="@id/info"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel"
        app:layout_constraintHorizontal_bias="1.0"/>



</androidx.constraintlayout.widget.ConstraintLayout>