<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/back"
        layout="@layout/image_back"/>

    <TextView
        android:id="@+id/title"
        style="@style/TextViewTitle"
        android:text="@string/verity_dialog_title"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/verity_intput_edit_text"/>

    <com.example.loginlibrary.VerifyCodeInputView
        android:id="@+id/verity_intput_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="number"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/dialog_title_text_color"
        app:borderColor="#B7B7B7"
        app:gap="40"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/get_verity_tint_info_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="70dp"
        app:constraint_referenced_ids="verity_tint1, phone_number"
        app:layout_constraintStart_toStartOf="@id/verity_intput_edit_text"
        app:layout_constraintTop_toBottomOf="@id/verity_intput_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/verity_tint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_tint"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_sample"
        app:layout_constraintStart_toEndOf="@id/verity_tint1"
        app:layout_constraintTop_toTopOf="@id/get_verity_tint_info_flow"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/verify_code_count_down_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        app:constraint_referenced_ids="time_count_down, verify_tint2, get_verify_code_again"
        app:layout_constraintTop_toTopOf="@id/get_verity_tint_info_flow"
        app:layout_constraintBottom_toBottomOf="@id/get_verity_tint_info_flow"
        app:layout_constraintEnd_toEndOf="@id/verity_intput_edit_text"/>

    <TextView
        android:id="@+id/time_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down_sample"
        android:textColor="@color/button_background"/>

    <TextView
        android:id="@+id/verify_tint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 后"
        app:layout_constraintStart_toEndOf="@id/time_count_down"
        app:layout_constraintTop_toTopOf="@id/time_count_down"/>

    <TextView
        android:id="@+id/get_verify_code_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_verify_code_again"
        android:textColor="@color/button_background"
        app:layout_constraintStart_toEndOf="@id/verify_tint2"
        app:layout_constraintTop_toTopOf="@id/verify_code_count_down_flow"/>


</androidx.constraintlayout.widget.ConstraintLayout>