<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/pass_login_logo"
        style="@style/LogoStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/pass_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputEditText"
        android:hint="@string/input_phone_hint"
        app:layout_constraintBottom_toTopOf="@id/pass_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_login_logo" />

    <EditText
        android:id="@+id/pass_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputEditText"
        android:hint="@string/input_phone_hint"
        android:layout_marginTop="5dp"
        android:drawableRight="@drawable/bg_sdk_yanjing"
        app:layout_constraintLeft_toLeftOf="@id/pass_login_phone"
        app:layout_constraintRight_toRightOf="@id/pass_login_phone"
        app:layout_constraintTop_toBottomOf="@id/pass_login_phone" />

    <TextView
        android:id="@+id/pass_login_setup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_setup_title"
        android:textColor="@color/button_background"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pass_login_password"
        app:layout_constraintEnd_toEndOf="@id/pass_login_phone" />

<!--    app:layout_constraintBottom_toTopOf="@id/token_login_footer_separate_line"-->
    <Button
        android:layout_width="0dp"
        android:id="@+id/passs_login_confirm"
        style="@style/ButtonEnableStyle"
        android:text="@string/next_step"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="@id/pass_login_phone"
        app:layout_constraintEnd_toEndOf="@id/pass_login_phone"
        app:layout_constraintTop_toBottomOf="@id/pass_login_setup_password"
        />






</androidx.constraintlayout.widget.ConstraintLayout>
