<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background_color">

    <ImageView
        style="@style/LogoStyle"
        android:id="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/xlcwsdk_get_make_sure_number_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputEditText"
        android:inputType="phone"
        android:hint="@string/input_phone_hint"
        app:layout_constraintBottom_toTopOf="@id/xlcwsdk_register_register_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <CheckBox
        android:id="@+id/regiser_protocol_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:button="@drawable/check_box_background"
        app:layout_constraintEnd_toStartOf="@id/accept_protocol"
        app:layout_constraintBottom_toBottomOf="@id/accept_protocol"
        app:layout_constraintTop_toTopOf="@id/accept_protocol"/>


    <TextView
        android:id="@+id/accept_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_mean_aggren"
        android:textSize="12sp"
        android:textColor="@color/text_color_protocol"
        app:layout_constraintBottom_toBottomOf="@id/protocol_flow"
        app:layout_constraintStart_toEndOf="@id/regiser_protocol_checkbox"
        app:layout_constraintRight_toLeftOf="@id/xlcwsdk_register_user_protocol_tv"
        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt" />

    <TextView
        android:id="@+id/xlcwsdk_register_user_protocol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_protocol"
        android:textSize="12sp"
        android:textColor="@color/text_color_protocol"
        app:layout_constraintLeft_toRightOf="@id/accept_protocol"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/protocol_flow"
        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt" />

    <Button
        android:id="@+id/xlcwsdk_register_register_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="5dp"
        android:text="@string/next_step"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/accept_protocol"
        app:layout_constraintLeft_toLeftOf="@id/xlcwsdk_get_make_sure_number_phone_et"
        app:layout_constraintRight_toRightOf="@id/xlcwsdk_get_make_sure_number_phone_et"
        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_get_make_sure_number_phone_et" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/protocol_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="10dp"
        app:constraint_referenced_ids="accept_protocol, xlcwsdk_register_user_protocol_tv"
        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/token_login_footer_separate_line"/>

    <View
        android:id="@+id/token_login_footer_separate_line"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/xlcwsdk_gray"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/protocol_flow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/footer_visitor_login_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:flow_horizontalGap="8dp"
        app:constraint_referenced_ids="footer_visitor_login_icon, footer_visitor_login_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/token_login_footer_separate_line"
        app:layout_constraintTop_toTopOf="@id/token_login_footer_separate_line"
        app:layout_constraintBottom_toBottomOf="@id/token_login_footer_separate_line"/>

    <ImageView
        android:id="@+id/footer_visitor_login_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/sdk_visitor_now"/>

    <TextView
        android:id="@+id/footer_visitor_login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/visitor_login"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/footer_visitor_login_icon"
        app:layout_constraintRight_toRightOf="@id/footer_visitor_login_flow"
        app:layout_constraintTop_toTopOf="@id/footer_visitor_login_flow"
        app:layout_constraintBottom_toBottomOf="@id/footer_visitor_login_flow"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/footer_verify_code_login_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:flow_horizontalGap="8dp"
        app:constraint_referenced_ids="footer_password_login, footer_password_login_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/token_login_footer_separate_line"
        app:layout_constraintTop_toTopOf="@id/token_login_footer_separate_line"
        app:layout_constraintBottom_toBottomOf="@id/token_login_footer_separate_line"/>

    <ImageView
        android:id="@+id/footer_password_login"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_toLeftOf="@id/footer_password_login_info"
        android:src="@drawable/sdk_account_now"/>

    <TextView
        android:id="@+id/footer_password_login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/account_login"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@id/footer_password_login"
        app:layout_constraintRight_toRightOf="@id/footer_verify_code_login_flow"
        app:layout_constraintTop_toTopOf="@id/footer_verify_code_login_flow"
        app:layout_constraintBottom_toBottomOf="@id/footer_verify_code_login_flow"/>


</androidx.constraintlayout.widget.ConstraintLayout>